syntax = "proto3";

message clientCRUDRequest {
	string operation = 1;
	Movie movies = 2;
}

message clientListRequest {
	string operation = 1;
	string argument = 2;
}

message serverReponseCode {
	string code = 1;
}

message MoviesList {
   repeated Movie movies = 1;
}

message Movie {
	string id = 1;
	string plot = 2;
	repeated string genres = 3;
	int32 runtime = 4;
	repeated string cast = 5;
	string num_mflix_comments = 6;
	string title = 7;
	string fullplot = 8;
	repeated string countries = 9;
	string released = 10;
	repeated string directors = 11;
	string rated = 12;
	string lastupdated = 13;
	int32 year = 14;
	string type = 15;
}