syntax = "proto3";
// The syntax type of the proto file

// Create a package for the movies service
package moviesPackage;

// Allow the generated files to be splited into multiple files
option java_multiple_files = true;

// Allow the generated files to be accessed by the specified package
option java_package = "org.example.structs";

// The service definition, which contains the RPCs, arguments, and return types
service MovieService {
  rpc CreateMovie(Movie) returns (Message) {};
  rpc GetMovie(Message) returns (Movie) {};
  rpc UpdateMovie(Movie) returns (Message) {};
  rpc DeleteMovie(Message) returns (Message) {};
  rpc ListMoviesByActor(Message) returns (MoviesList) {};
  rpc ListMoviesByGenre(Message) returns (MoviesList) {};
}

// The Message definition that is used to send a message
message Message {
  string message = 1;
}

// The MoviesList definition that is used to send a list of movies
message MoviesList {
  repeated Movie movies = 1;
}

// The Movie definition that is used to send a movie 
message Movie {
  string id = 1;
  string plot = 2;
  string genre = 3;
  int32 runtime = 4;
  repeated string cast = 5;
  int32 num_mflix_comments = 6;
  string title = 7;
  string fullplot = 8;
  repeated string countries = 9;
  string released = 10;
  repeated string directors = 11;
  string rated = 12;
  string lastupdated = 13;
  int32 year = 14;
  string type = 15;
}